[package]
name = "vat_jp"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Mao Nabeta <mao.nabeta@gmail.com>"]
description = "vat_jp calculates consumption tax (incl. sales tax, VAT, excise duty, etc.) in Japan."
repository = "https://github.com/nabetama/vat_jp/"
keywords = ["tax", "japanese"]
categories = ["finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23" }
# num = { version = "0.4.0" }
derive_builder = "0.12.0"

[dev-dependencies]
cargo-watch = "8.4.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3